# tic-tac-toe

./: LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  utils.py
src/core/: __init__.py  ai.py  board.py  engine.py
src/ui/: __init__.py  art.py  render.py
tests/: test_ai.py  test_board.py  test_engine.py
