[tool.poetry]
name = "python-template"
version = "1.0.4"
description = 'Tic-Tac-Toe is a classic strategy game in which players take turns placing their icons (either "X" or "O") on a 3x3 grid. The goal of the game is to get three of your icons in a row (horizontally, vertically, or diagonally) before your opponent does.'
authors = ["Sir.Siren"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
